--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0"
+    "dotenv": "^6.2.0",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.19.4"
   }
 }
